<resources>
    <string name="app_name">MeQuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="what_country_does_the_flag_belong">What country does the flag belong?</string>
    <string name="country_flag">country flag</string>
    <string name="_0_10">0/10</string>
    <string name="check">CHECK</string>
    <string name="next">Next</string>
    <string name="see_result">See Result</string>
    <string name="result">Result</string>
    <string name="golden_cup">Golden cup</string>
    <string name="congratulation">Congratulation</string>
    <string name="finish">FINISH</string>
</resources>