<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"

        />

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"


         >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/gray"
                    android:text="@string/please_enter_your_name"
                    android:layout_marginBottom="15dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameData"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/name"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/app_bg"
                    android:text="@string/start"
                    android:textAllCaps="false"
                    android:textColor="@color/white"

                    />

            </LinearLayout>
     </androidx.cardview.widget.CardView>

  </LinearLayout>