<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity"
    android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="20dp"
           android:gravity="center"
           >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/what_country_does_the_flag_belong"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="15dp"
                 android:textAlignment="center"

                 />

           <ImageView
               android:id="@+id/flagImage"
               android:contentDescription="@string/country_flag"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:src="@drawable/usa"
               android:layout_marginBottom="10dp"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginBottom="15dp"
                >
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="10"
                    android:progress="5"
                    />

                <TextView
                    android:id="@+id/progressText"
                    android:layout_marginStart="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_10"
                    android:textSize="16sp"
                    android:layout_weight="1"

                    />

            </LinearLayout>
           <TextView
               android:id="@+id/optionOne"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:text="Canada"
               android:layout_marginBottom="15dp"
               android:background="@drawable/option_bg"
               android:gravity="center"
               />
           <TextView
               android:id="@+id/optionTwo"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:text="France"
               android:layout_marginBottom="15dp"
               android:background="@drawable/option_bg"
               android:gravity="center"


               />
           <TextView
               android:id="@+id/optionThree"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:text="USA"
               android:layout_marginBottom="15dp"
               android:background="@drawable/option_bg"

              android:gravity="center"


               />
           <TextView
               android:id="@+id/optionFour"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:text="Nigeria"
               android:layout_marginBottom="15dp"
               android:background="@drawable/option_bg"
               android:gravity="center"
               />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/nextButton"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:text="@string/check"
               android:textColor="@color/white"
               android:textSize="16sp"
               android:textStyle="bold"
               android:background="@drawable/app_bg"
               app:cornerRadius="7dp"
               android:layout_marginTop="5dp"
               />


       </LinearLayout>

</androidx.core.widget.NestedScrollView>